Fixes some colors used in light and dark mode

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -31,9 +31,10 @@
   /* Comprehend */
   --comprehend-txt-field-border: #2684FF;
   --comprehend-btn-color: #37bf84;
-  --comprehend-med-btn-color: #ff0000;
+  --comprehend-med-btn-color: #FF495C;
   --comprehend-btn-hover-color: #00ff90;
-  --comprehend-med-btn-hover-color: #FF495C;
+  --comprehend-med-btn-hover-color: #ff0000;
+  --comprehend-readonly-color: #b0abab;
 }
 
 /* Dark Theme */
@@ -70,6 +71,7 @@
   --comprehend-med-btn-color: #651210;
   --comprehend-btn-hover-color: #6fd812;
   --comprehend-med-btn-hover-color: #dc2420;
+  --comprehend-readonly-color: #b0abab;
 }
 
 #app {
